# qml_classifier

./: .gitattributes  .gitignore  01_setup_and_research_question.ipynb  02_datasets_and_classical_baseline.ipynb  03_quantum_encodings_explained.ipynb  04_vqc_angle_encoding.ipynb  05_vqc_amplitude_encoding.ipynb  06_vqc_zz_feature_map.ipynb  07_comparative_analysis.ipynb  AGENTS.md  LICENSE  README.md  cspell.json  future_quantum_advantage.md  install_vscode_extensions.ps1  install_vscode_extensions.sh  pyproject.toml  qml_classifier.code-workspace  qml_utils.py
.github/: copilot-instructions.md
